--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
         <li>Nilai Terkecil: <span class="nilai-kecil"></span></li>
         <li>Range: <span class="range"></span></li>
       </ul>
-      <p>Masukkan Nilai Log:</p>
+      <p>Masukkan Nilai Log(Banyak Data)</p>
       <input type="text" class="input-log" placeholder="Input Number..." />
       <button class="search-log" type="button">Search</button>
       <ul>
         <li>Banyak Kelas: <span class="banyak-kelas"></span></li>
+        <li>Lebar Kelas: Range / Banyak Kelas</li>
       </ul>
     </div>
 
